[project]
name = "hf-ai-agents"
version = "0.1.0"
description = "Hugging Face AI Agents Course"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.30.2",
    "dotenv>=0.9.9",
    "smolagents>=1.13.0",
    "requests>=2.32.3",
    "duckduckgo-search>=8.0.0",
    "pandas>=2.2.3",
]
